# pngquant-android

./: .gitignore  README.md  settings.gradle
png/: .gitignore  build.gradle
png/src/main/java/com/nicdahlquist/pngquant/: LibPngQuant.java
png/src/main/java/org/: bitmapquant.java  pngquant.java
png/src/main/jni/: .gitignore  .txt  CMakeLists.txt  android_jni.c  export.map  jni.c  jni.h  native_glue.c  spngutil.c  spngutil.h
png/src/main/jni/pngquant/: pngquant.c  pngquant.h
